--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 		<div class="inner">
 			<a href="#" class="image avatar"><img src="images/me.jpeg" alt="" /></a>
 			<h1>Hi, I am <strong>JeongJun Park</strong><br />
-				Neuroscience PhD Candidate<br />Washington University in St. Louis
+				Neuroscience PhD Candidate<br /><br />
+				Washington University in St. Louis
 			</h1>
 		</div>
 	</header>
@@ -521,5 +522,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	<script src="assets/js/main.js"></script>
 
 </body>
+
 
 </html>
