--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				<a href="https://neuroscience.wustl.edu/people/jeongjun-park/" target="_blank" rel="noopener">
 					Washington University in St. Louis</a>, working with
 				<a href="https://neuroscience.wustl.edu/people/lawrence-snyder-md-phd/" target="_blank" rel="noopener">
-					Lawrence Snyder</a>.<br />
+					Lawrence Snyder</a>.
 				I received ME in Biomedical Engineering at Sungkyunkwan University in Korea, advised by
 				<a href="https://semoconlab.com/people/current/" target="_blank" rel="noopener"> Joonyeol Lee</a>.
 			</p>
@@ -525,3 +525,4 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 
 </html>
+
