--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 						<img src="images/fulls/geometry.png" alt="" />
 					</a>
 					<h3>Is spatial memory coding consistent across tasks?</h3>
-					<p> PFC represents spatial memory with a shared structure across tasks, while task context shifts
+					<p> Prefrontal cortex represents spatial memory with a shared structure across tasks, while task context shifts
 						the memory manifolds.
 						<br /><br />
 						"Compositional architecture: Orthogonal neural codes for task context and spatial memory in
@@ -108,14 +108,14 @@
 					<a href="images/fulls/bayes.jpg" class="image fit thumb ar-tall">
 						<img src="images/fulls/bayes.jpg" alt="" />
 					</a>
-					<h3>Can eye movements be predicted by Bayesian inference model?</h3>
+					<h3>Can Bayesian inference model predict eye movements?</h3>
 					<p> Changes in bias and variability in smooth pursuit eye movements induced by prior knowledge
 						were quantitatively explained by a Bayesian observer model.
 						<br /><br />
 						"Effect of prior direction expectation on the accuracy and precision of smooth pursuit eye
 						movements."
 						<a href="https://www.frontiersin.org/journals/systems-neuroscience/articles/10.3389/fnsys.2019.00071/full"
-							target="_blank" rel="noopener">Frontiers in Systems Neuroscience (2019)</a>
+							target="_blank" rel="noopener">Frontiers in systems neuroscience (2019)</a>
 					</p>
 				</article>
 			</div>
@@ -525,4 +525,5 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 
 </html>
+
 
