--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 		<div class="inner">
 			<a href="#" class="image avatar"><img src="images/me.jpeg" alt="" /></a>
 			<h1>Hi, I am <strong>JeongJun Park</strong><br />
-				Neuroscience PhD Candidate<br /><br />
-				Washington University in St. Louis
+				Neuroscience PhD Candidate
 			</h1>
 		</div>
 	</header>
@@ -525,5 +524,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 
 </html>
+
 
 
