--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 	<header id="header">
 		<div class="inner">
 			<a href="#" class="image avatar"><img src="images/me.jpeg" alt="" /></a>
-			<h1>Hi, I am <strong>JeongJun Park</strong><br />
-				Neuroscience PhD Candidate
+			<h1>Hi, I am <strong>JeongJun Park</strong>,<br />
+				Neuroscience PhD Candidate at Washington University in St. Louis
 			</h1>
 		</div>
 	</header>
@@ -73,7 +73,7 @@
 						<a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC11888474/" target="_blank"
 							rel="noopener">bioRxiv (2025)</a>
 						<br /><br />
-						Code is available at
+						Code and data are available
 						<a href="https://github.com/pjjeongjun/Compositional_Architecture" target="_blank"
 							rel="noopener"> here </a>
 					</p>
@@ -91,7 +91,7 @@
 						<a href="https://www.science.org/doi/full/10.1126/sciadv.adg4156" target="_blank"
 							rel="noopener">Science advances (2023)</a>
 						<br /><br />
-						Code is available at
+						Code and data available
 						<a href="https://github.com/pjjeongjun/Prior_Expectation" target="_blank"
 							rel="noopener"> here </a>
 					</p>
@@ -213,6 +213,7 @@
 
 
 </html>
+
 
 
 
