--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<header id="header">
 		<div class="inner">
 			<a href="#" class="image avatar"><img src="images/me.jpeg" alt="" /></a>
-			<h1>Hi, I am <strong>JeongJun Park</strong>,<br />
+			<h1>Hi! I am <strong>JeongJun Park</strong>,<br />
 				Neuroscience PhD Candidate at Washington University in St. Louis
 			</h1>
 		</div>
@@ -213,6 +213,7 @@
 
 
 </html>
+
 
 
 
