--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 						<a href="https://www.science.org/doi/full/10.1126/sciadv.adg4156" target="_blank"
 							rel="noopener">Science advances (2023)</a>
 						<br /><br />
-						Code and data available
+						Code and data are available
 						<a href="https://github.com/pjjeongjun/Prior_Expectation" target="_blank"
 							rel="noopener"> here </a>
 					</p>
@@ -213,6 +213,7 @@
 
 
 </html>
+
 
 
 
