--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 		<div class="inner">
 			<a href="#" class="image avatar"><img src="images/me.jpeg" alt="" /></a>
 			<h1>Hi! I am <strong>JeongJun Park</strong>,<br />
-				Neuroscience PhD Candidate at Washington University in St. Louis
+				Neuroscience PhD Candidate <br />
+				at Washington University in St. Louis
 			</h1>
 		</div>
 	</header>
@@ -213,6 +214,7 @@
 
 
 </html>
+
 
 
 
