--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 <html>
 
 <head>
-	<title>JeongJun Park</title>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<link rel="stylesheet" href="assets/css/main.css" />
+    <title>JeongJun Park</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="stylesheet" href="assets/css/main.css" />
 </head>
 
 <body class="is-preload">
@@ -214,6 +215,7 @@
 
 
 </html>
+
 
 
 
