--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>JeongJun Park</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="icon" type="image/png" href="icon.png">
     <link rel="stylesheet" href="assets/css/main.css" />
 </head>
 
@@ -215,6 +215,7 @@
 
 
 </html>
+
 
 
 
