--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <title>JeongJun Park</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/png" href="icon.png">
-    <link rel="stylesheet" href="assets/css/main.css" />
+	<link rel="shortcut icon" href="favicon_J.ico">
+	<link rel="stylesheet" href="assets/css/main.css" />
 </head>
 
 <body class="is-preload">
@@ -215,6 +215,7 @@
 
 
 </html>
+
 
 
 
